// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render the Expander Group component 1`] = `
<div>
  <div
    class="nhsuk-expander-group"
  >
    <details
      class="nhsuk-details nhsuk-expander"
      id="nhsuk-details0"
      nhsuk-polyfilled="true"
    >
      <summary
        aria-controls="nhsuk-details__text0"
        aria-expanded="false"
        class="nhsuk-details__summary"
        role="button"
        tabindex="0"
      >
        <span
          class="nhsuk-details__summary-text"
        >
          How to measure your blood glucose levels
        </span>
      </summary>
      <div
        aria-hidden="true"
        class="nhsuk-details__text"
        id="nhsuk-details__text0"
        style="display: none;"
      >
        <p>
          Testing your blood at home is quick and easy, although it can be uncomfortable. It does get better.
        </p>
        <p>
          You would have been given:
        </p>
        <ul>
          <li>
            a blood glucose metre
          </li>
          <li>
            small needles called lancets
          </li>
          <li>
            a plastic pen to hold the lancets
          </li>
          <li>
            small test strips
          </li>
        </ul>
      </div>
    </details>
    <details
      class="nhsuk-details nhsuk-expander"
      id="nhsuk-details1"
      nhsuk-polyfilled="true"
    >
      <summary
        aria-controls="nhsuk-details__text1"
        aria-expanded="false"
        class="nhsuk-details__summary"
        role="button"
        tabindex="0"
      >
        <span
          class="nhsuk-details__summary-text"
        >
          When to check your blood glucose level
        </span>
      </summary>
      <div
        aria-hidden="true"
        class="nhsuk-details__text"
        id="nhsuk-details__text1"
        style="display: none;"
      >
        <p>
          Try to check your blood:
        </p>
        <ul>
          <li>
            before meals
          </li>
          <li>
            2 to 3 hours after meals
          </li>
          <li>
            before, during (take a break) and after exercise
          </li>
        </ul>
        <p>
          This helps you understand your blood glucose levels and how they’re affected by meals and exercise. It should help you have more stable blood glucose levels.
        </p>
      </div>
    </details>
  </div>
</div>
`;

exports[`should render the Expander component 1`] = `
<div>
  <details
    class="nhsuk-details nhsuk-expander"
    id="nhsuk-details0"
    nhsuk-polyfilled="true"
  >
    <summary
      aria-controls="nhsuk-details__text0"
      aria-expanded="false"
      class="nhsuk-details__summary"
      role="button"
      tabindex="0"
    >
      <span
        class="nhsuk-details__summary-text"
      >
        Get your medical records
      </span>
    </summary>
    <div
      aria-hidden="true"
      class="nhsuk-details__text"
      id="nhsuk-details__text0"
      style="display: none;"
    >
      <p>
        You can see your GP records by:
      </p>
      <ul>
        <li>
          asking for them at your GP surgery 
        </li>
        <li>
          going online to see them (if you have signed up for
           
          <a
            class="nhsuk-link"
            href="/using-the-nhs/nhs-services/gps/gp-online-services/"
          >
            GP online services
          </a>
          )
        </li>
      </ul>
    </div>
  </details>
</div>
`;
